@@ -140,6 +140,10 @@ ref_to_val_generic(void *arg, char *match, char *output, size_t max_size,
     {
       strcp_s(output, max_size, spec_p1);
     }
+  else if (!strncmp(match, "pspec2", 6))
+    {
+      strcp_s(output, max_size, spec_p2);
+    }
   else if (!strncmp(match, "glconf", 6))
     {
       strcp_s(output, max_size, GLCONF_I);
@@ -392,6 +396,17 @@ dt_rval_generic_pspec1(void *arg, char *match, char *output, size_t max_size,
   return "";
 }
 
+char *
+dt_rval_generic_pspec2(void *arg, char *match, char *output, size_t max_size,
+    void *mppd)
+{
+  if (spec_p2)
+    {
+      return spec_p2;
+    }
+  return "";
+}
+
 #define MSG_GENERIC_BS         0x3A
 
 void *
@@ -544,6 +559,11 @@ ref_to_val_lk_generic(void *arg, char *match, char *output, size_t max_size,
   else if (!strncmp(match, "pspec1", 6))
     {
       return as_ref_to_val_lk(match, dt_rval_generic_pspec1, (__d_drt_h ) mppd,
+          "%s");
+    }
+  else if (!strncmp(match, "pspec2", 6))
+    {
+      return as_ref_to_val_lk(match, dt_rval_generic_pspec2, (__d_drt_h ) mppd,
           "%s");
     }
   else if (match[0] == 0x3F)
